# PicoRapidX2

./: CMakeLists.txt  PicoRapidX.c  PicoRapidX2.c  PicoRapidX2.uf2  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c  usb_msc_device.c  usb_test_simple.c  vsync_separator.c  vsync_separator.h  vsync_separator.pio
.github/: CHANGELOG.md  DESIGN.md  README.md
.github/docs/: flash-memory-map.md  hardware.md  macro-format.md  msc-mode.md
build_new/: .ninja_deps  .ninja_log  CMakeCache.txt  PicoRapidX.dis  PicoRapidX.elf  PicoRapidX.elf.map  PicoRapidX.hex  PicoRapidX.uf2  build.ninja  cmake_install.cmake  compile_commands.json
build_new/pico-sdk/: cmake_install.cmake
build_new/pico-sdk/docs/: cmake_install.cmake
build_new/pico-sdk/src/: cmake_install.cmake
build_new/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_sync/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_time/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
build_new/pico-sdk/src/common/pico_util/: cmake_install.cmake
build_new/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
build_new/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
build_new/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
build_new/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
build_new/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
build_new/pico-sdk/tools/: cmake_install.cmake
build_new/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_new/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  PicoRapidX.dis  PicoRapidX.elf  PicoRapidX.elf.map  PicoRapidX.hex  PicoRapidX.uf2  build.ninja  cmake_install.cmake
build_ninja/pico-sdk/: cmake_install.cmake
build_ninja/pico-sdk/docs/: cmake_install.cmake
build_ninja/pico-sdk/src/: cmake_install.cmake
build_ninja/pico-sdk/tools/: cmake_install.cmake
build_ninja/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_ninja/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
(+162 files in other folders)
